Removed some old files